# manus

./: README.md  pyproject.toml
app/: streamlit_app.py
docs/: overview.md
manus/: __init__.py  cli.py  config.py
manus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
manus/agents/: flows.py  orchestrator.py  planning.py
manus/data/: __init__.py  seed_documents.json
manus/llm/: __init__.py  base.py  http_client.py
manus/memory/: __init__.py  store.py
manus/tools/: __init__.py  base.py  calculator.py  functools_component.py  local_search.py
tests/: test_calculator.py  test_functools_tools.py  test_local_search.py  test_plan_parser.py
